--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 #main {
     text-align: center;
 }
+table {
+    border: 1px solid black;
+    width: 300px;
+    text-align: center;
+}
+td {
+    border: 1px solid black;
+    padding: 5px;
+}
